# jni-taskpool-encap2cpp

./: CMakeLists.txt  README.md  main.cpp  main2.cpp
app/callbacks/: BaseCallback.cpp  BaseCallback.h  TeamCallback.cpp  TeamCallback.h
task/: JNIThreadPool.cpp  JNIThreadPool.h  Task.cpp  Task.h  job.c
